Imported Upstream version 3.1.9.2

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -123,6 +123,7 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionDownload_from_URL"/>
    <addaction name="actionOpen"/>
    <addaction name="actionDelete"/>
    <addaction name="separator"/>
